# Linux-Migration-Assistant

./: .gitignore  .travis.yml  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: codeql.yml  python-app.yml
requirements/: common.txt  dev.txt  test.txt
src/: app.py
src/backups/: chunks.py  local_backup.py
src/helpers/: backup_helper.py  hash_helper.py
src/tests/: test_flatpak_service.py  test_hello_world.py  test_packagekit_service.py  test_snap_package_service.py  tests_packagekit_service.py
src/tests/common/: utils.py
src/tests/integration/tests_helper/: test_backup_helper.py
src/tests/integration/tests_helper/test_file/: diff.txt  same.txt
src/tests/tests_backups/: test_local_backup.py
src/utils/: cmds_utils.py
