[metadata]
name = Migration tool
description = Simple tool to migrate your stuff from one linux laptop to another
long_description = file:README.md
url = https://github.com/open-tuxnologies/Linux-Migration-Assistant
author = Open Tuxnologies
author_email = opentuxnologies@gmail.com
license = GPL-3.0 License
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: GPL-3.0 License
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
platforms = linux
[flake8]
ignore = D203
exclude = .git,.gitignore,__pycache__,docs/source/conf.py,old,build,dist,tests
max-complexity = 10
